更新文件位置

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta http-equiv="pragma" content="no-cache" />
         <title>试卷管理系统</title>
-        <link rel="stylesheet" type="text/css" href="../../vendor/bootstrap/css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="../../dist/nav/nav.css" />
-        <link rel="stylesheet" type="text/css" href="../../dist/index/index.css" />
+        <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" href="dist/nav/nav.css" />
+        <link rel="stylesheet" type="text/css" href="dist/index/index.css" />
         <style type="text/css">
             body {
                 background-color: #f7f7f7;
@@ -55,7 +55,7 @@
             </div>
         </nav>
         <div class="content">
-            <div class="content-head" style="background-image: url(../../image/index_bg.jpg);">
+            <div class="content-head" style="background-image: url(image/index_bg.jpg);">
                 <div class="mask">
                     <div class="title">
                         <p>便捷的在线考试</p>
@@ -71,10 +71,10 @@
                         <div class="title">
                             <h2>编辑试卷</h2>
                             <div class="info text-muted">在线/离线编辑、富文本编辑、拖拽排序、快速生成试卷、一键设置答案、一键设置分数</div>
-                            <a class="btn btn-default btn-ap" href="paper/edit.html" role="button">去看看</a>
+                            <a class="btn btn-default btn-lg btn-ap" href="views/User/paper/edit.html" role="button">预览</a>
                         </div>
                         <div class="img-box">
-                            <img src="../../image/info/paper_edit_1.png" />
+                            <img src="image/info/paper_edit_1.png" />
                         </div>
                     </div>
 
@@ -88,10 +88,10 @@
                         <div class="title">
                             <h2>批改试卷</h2>
                             <div class="info text-muted">在线/离线批改、自动/手动批改、自动计算分数</div>
-                            <a class="btn btn-default btn-ap" href="Correct/correct.html" role="button">去看看</a>
+                            <a class="btn btn-default btn-lg btn-ap" href="views/User/Correct/correct.html" role="button">预览</a>
                         </div>
                         <div class="img-box">
-                            <img src="../../image/info/correct_1.png" />
+                            <img src="image/info/correct_1.png" />
                         </div>
                     </div>
 
@@ -105,10 +105,10 @@
                         <div class="title">
                             <h2>在线答题</h2>
                             <div class="info text-muted">在线/离线答题、富文本编辑、更多玩法</div>
-                            <a class="btn btn-default btn-ap" href="answer/answer.html" role="button">去看看</a>
+                            <a class="btn btn-default btn-lg btn-ap" href="views/User/answer/answer.html" role="button">预览</a>
                         </div>
                         <div class="img-box">
-                            <img src="../../image/info/answer_1.png" />
+                            <img src="image/info/answer_1.png" />
                         </div>
                     </div>
 
@@ -123,7 +123,7 @@
                             <h2>批改总览</h2>
                         </div>
                         <div class="img-box">
-                            <img src="../../image/info/correct.png" />
+                            <img src="image/info/correct.png" />
                         </div>
                     </div>
 
@@ -135,8 +135,8 @@
         </div>
         <div class="footer"></div>
 
-        <script src="../../vendor/jquery/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../vendor/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="vendor/jquery/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
+        <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
         </script>
     </body>
