--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
 
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <p>© 2017 起源计划网络科技工作室</p>
+        </div>
 
         <script src="vendor/jquery/jquery-2.1.0.js" type="text/javascript" charset="utf-8"></script>
         <script src="vendor/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
